--- a/index.html
+++ b/index.html
@@ -1,92 +1,193 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>royalekingdom</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body class="dark">
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas"></canvas>
-    </div>
-    <div id="loading-cover" style="display:none;">
-      <div id="unity-loading-bar">
-        <div id="unity-logo"><img src="logo.png"></div>
-        <div id="unity-progress-bar-empty" style="display: none;">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-        <div class="spinner"></div>
-      </div>
-    </div>
-    <div id="unity-fullscreen-button" style="display: none;"></div>
-    <script>
-      const hideFullScreenButton = "1";
-      const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Build.loader.js";
-      const config = {
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>royalekingdom-client</title>
+	<link rel="shortcut icon" href="TemplateData/img/favicon.ico">
+	<link rel="stylesheet" href="TemplateData/css/style.css">
+</head>
+
+<body>
+
+	<div class="keepRatio">
+		<div id="gameContainer" class="unity-desktop webgl-content">
+			<!-- <button id="fullScreenButton" onclick="ToggleFullScreen()"></button> -->
+			<canvas id="gameCanvas"></canvas>
+			<div id="loadingBlock">
+				<img class="logo" src="TemplateData/img/Logo.png"></img>
+				<div id="progressBar">
+					<div>LOADING ...</div>
+					<div class="centered">
+						<div id="emptyBar"></div>
+						<div id="fullBar"></div>
+					</div>
+				</div>
+
+				<div id="warningBrowserBlock" style="display:none;">
+					<div class="browserIcons">
+						<a href="https://www.mozilla.org/firefox" target="_blank"><img
+								src="TemplateData/img/browser-firefox.png" alt="Firefox browser"></a>
+						<a href="https://www.google.com/chrome" target="_blank"><img
+								src="TemplateData/img/browser-chrome.png" alt="Chrome browser"></a>
+						<a href="https://www.apple.com/safari/" target="_blank"><img
+								src="TemplateData/img/browser-safari.png" alt="Safari browser"></a>
+					</div>
+				</div>
+			</div>
+
+			<div id="errorBrowserBlock" style="display:none;">
+				<img class="logo" src="TemplateData/img/Logo.png"></img>
+				<div id="errorContent" style="display:none;">
+					<div class="browserIcons">
+						<a href="https://www.mozilla.org/firefox" target="_blank"><img
+								src="TemplateData/img/browser-firefox.png" alt="Firefox browser"></a>
+						<a href="https://www.google.com/chrome" target="_blank"><img
+								src="TemplateData/img/browser-chrome.png" alt="Chrome browser"></a>
+						<a href="https://www.apple.com/safari/" target="_blank"><img
+								src="TemplateData/img/browser-safari.png" alt="Safari browser"></a>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<script>
+		function ToggleFullScreen() {
+			var isInFullScreen = (document.fullscreenElement && document.fullscreenElement !== null) ||
+				(document.webkitFullscreenElement && document.webkitFullscreenElement !== null) ||
+				(document.msFullscreenElement && document.msFullscreenElement !== null);
+
+			var element = document.body.getElementsByClassName("webgl-content")[0];
+
+			if (!isInFullScreen) {
+				// document.getElementById("fullScreenButton").style.backgroundImage = "url('TemplateData/img/fullScreen_off.png')";
+				if (element.webkitRequestFullscreen) {
+					element.webkitRequestFullscreen();
+				} else if (element.msRequestFullscreen) {
+					element.msRequestFullscreen();
+				} else if (element.requestFullscreen) {
+					element.requestFullscreen();
+				}
+			}
+			else {
+				// document.getElementById("fullScreenButton").style.backgroundImage = "url('TemplateData/img/fullScreen_on.png')";
+				if (document.exitFullscreen) {
+					document.exitFullscreen();
+				} else if (document.webkitExitFullscreen) { //Chrome, Safari and Opera
+					document.webkitExitFullscreen();
+				} else if (document.msExitFullscreen) { //IE/Edge
+					document.msExitFullscreen();
+				}
+			}
+		}
+
+		function CheckCompatibility() {
+			if (!hasWebGL()) {
+				document.getElementById("errorBrowserBlock").style.display = "inherit";
+			}
+			else if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+				document.getElementById("warningMobileBlock").style.display = "inherit";
+			}
+			else if (!isFirefox && !isSafari && !isChrome) {
+				document.getElementById("warningBrowserBlock").style.display = "inherit";
+			}
+		}
+
+		function hasWebGL() {
+			var supported;
+			try {
+				var canvas = document.createElement('canvas');
+				supported = !!window.WebGLRenderingContext && (canvas.getContext('webgl') || canvas.getContext('experimental-webgl'));
+			} catch (e) { supported = false; }
+
+			try {
+				// let is by no means required, but will help us rule out some old browsers/devices with potentially buggy implementations: http://caniuse.com/#feat=let
+				eval('let foo = 123;');
+			} catch (e) { supported = false; }
+			canvas = undefined;
+			return supported;
+		}
+
+		var isFirefox = typeof InstallTrigger !== 'undefined';
+		var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && safari.pushNotification));
+
+		var isChromium = window.chrome;
+		var winNav = window.navigator;
+		var vendorName = winNav.vendor;
+		var isOpera = typeof window.opr !== "undefined";
+		var isIEedge = winNav.userAgent.indexOf("Edge") > -1;
+		var isIOSChrome = winNav.userAgent.match("CriOS");
+		var isChrome = isIOSChrome || (isChromium !== null && typeof isChromium !== "undefined" && vendorName === "Google Inc." && isOpera === false && isIEedge === false);
+
+		var buildUrl = "Build";
+		var loaderUrl = buildUrl + "/Build.loader.js";
+		var config = {
+			dataUrl: buildUrl + "/Build.data.br",
+			frameworkUrl: buildUrl + "/Build.framework.js.br",
+			codeUrl: buildUrl + "/Build.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "royalekingdom",
-        productVersion: "1.0",
-      };
+			companyName: "DefaultCompany",
+			productName: "royalekingdom-client",
+			productVersion: "1.0",
+		};
 
-      const container = document.querySelector("#unity-container");
-      const canvas = document.querySelector("#unity-canvas");
-      const loadingCover = document.querySelector("#loading-cover");
-      const progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
-      const progressBarFull = document.querySelector("#unity-progress-bar-full");
-      const fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      const spinner = document.querySelector('.spinner');
+		var container = document.querySelector("#gameContainer");
+		var canvas = document.querySelector("#gameCanvas");
+		var loadingBar = document.querySelector("#loadingBlock");
+		var progressBarFull = document.querySelector("#fullBar");
+		var progressBarEmpty = document.querySelector("#emptyBar");
+		// var fullscreenButton = document.querySelector("#fullScreenButton");
 
-      const canFullscreen = (function() {
-        for (const key of [
-            'exitFullscreen',
-            'webkitExitFullscreen',
-            'webkitCancelFullScreen',
-            'mozCancelFullScreen',
-            'msExitFullscreen',
-          ]) {
-          if (key in document) {
-            return true;
-          }
-        }
-        return false;
-      }());
+		if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+			container.className = "unity-mobile";
+			config.devicePixelRatio = 1;
+		}
+		// CheckCompatibility();
 
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        container.className = "unity-mobile";
-        config.devicePixelRatio = 1;
-      }
-      loadingCover.style.display = "";
+		var targetProgress = 0;
+		var currentProgress = 0;
+		var script = document.createElement("script");
+		script.src = loaderUrl;
+		script.onload = () => {
+			createUnityInstance(canvas, config, (progress) => {
+				targetProgress = progress;
+			}).then((unityInstance) => {
+				// fullscreenButton.onclick = () => {
+				// 	ToggleFullScreen();
+				// };
+			}).catch((message) => {
+				alert(message);
+			});
+		};
+		document.body.appendChild(script);
+		var delta = 0;
+		var x = setInterval(function () {
+			if (targetProgress > 0) {
+				delta = (targetProgress - currentProgress) / 10;
+				if (delta > 0) currentProgress += delta;
+				if (currentProgress > 1) currentProgress = 1;
+				if (Math.abs(targetProgress - currentProgress) <= 0.001) {
+					currentProgress = targetProgress;
+				}
+				setProgress(currentProgress);
+			}
+		}, 10);
 
-      const script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          spinner.style.display = "none";
-          progressBarEmpty.style.display = "";
-          progressBarFull.style.width = `${100 * progress}%`;
-        }).then((unityInstance) => {
-          loadingCover.style.display = "none";
-          if (canFullscreen) {
-            if (!hideFullScreenButton) {
-              fullscreenButton.style.display = "";
-            }
-            fullscreenButton.onclick = () => {
-              unityInstance.SetFullscreen(1);
-            };
-          }
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
-    </script>
-  </body>
+		var setProgress = function (progress) {
+			progressBarFull.style.width = 100 * progress + "%";
+			progressBarEmpty.style.width = (100 * (1 - progress)) + "%";
+			if (progress == 1) {
+				loadingBar.style.display = "none";
+				clearInterval(x);
+			}
+		}
+
+		setProgress(0);
+	</script>
+
+</body>
+
 </html>
