--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>royalekingdom-client</title>
+	<title>Royale Kingdom</title>
 	<link rel="shortcut icon" href="TemplateData/img/favicon.ico">
 	<link rel="stylesheet" href="TemplateData/css/style.css">
 </head>
@@ -125,12 +125,12 @@
 		var buildUrl = "Build";
 		var loaderUrl = buildUrl + "/Build.loader.js";
 		var config = {
-			dataUrl: buildUrl + "/Build.data.br",
-			frameworkUrl: buildUrl + "/Build.framework.js.br",
-			codeUrl: buildUrl + "/Build.wasm.br",
+			dataUrl: buildUrl + "/Build.data.gz",
+			frameworkUrl: buildUrl + "/Build.framework.js.gz",
+			codeUrl: buildUrl + "/Build.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
 			companyName: "DefaultCompany",
-			productName: "royalekingdom-client",
+			productName: "Royale Kingdom",
 			productVersion: "1.0",
 		};
 
