--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         streamingAssetsUrl: "StreamingAssets",
 			companyName: "DefaultCompany",
 			productName: "Royale Kingdom",
-			productVersion: "1.0.1",
+			productVersion: "1.0.a.001",
 		};
 
 		var container = document.querySelector("#gameContainer");
