--- a/index.html
+++ b/index.html
@@ -2,191 +2,156 @@
 <html lang="en-us">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Royale Kingdom</title>
-	<link rel="shortcut icon" href="TemplateData/img/favicon.ico">
-	<link rel="stylesheet" href="TemplateData/css/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Royale Kingdom</title>
+  <link rel="shortcut icon" href="TemplateData/img/favicon.ico">
+  <link rel="stylesheet" href="TemplateData/css/style.css">
 </head>
 
 <body>
 
-	<div class="keepRatio">
-		<div id="gameContainer" class="unity-desktop webgl-content">
-			<!-- <button id="fullScreenButton" onclick="ToggleFullScreen()"></button> -->
-			<canvas id="gameCanvas"></canvas>
-			<div id="loadingBlock">
-				<img class="logo" src="TemplateData/img/Logo.png"></img>
-				<div id="progressBar">
-					<div>LOADING ...</div>
-					<div class="centered">
-						<div id="emptyBar"></div>
-						<div id="fullBar"></div>
-					</div>
-				</div>
+  <div class="keepRatio">
+    <div id="gameContainer" class="unity-desktop webgl-content">
+      <!-- <button id="fullScreenButton" onclick="ToggleFullScreen()"></button> -->
+      <canvas id="gameCanvas"></canvas>
+      <div id="loadingBlock">
+        <img class="background" src="TemplateData/img/background.png"></img>
+        <div class="loader"></div>
+        <div id="warningBrowserBlock" style="display:none;">
+          <div class="browserIcons">
+            <a href="https://www.mozilla.org/firefox" target="_blank"><img src="TemplateData/img/browser-firefox.png"
+                alt="Firefox browser"></a>
+            <a href="https://www.google.com/chrome" target="_blank"><img src="TemplateData/img/browser-chrome.png"
+                alt="Chrome browser"></a>
+            <a href="https://www.apple.com/safari/" target="_blank"><img src="TemplateData/img/browser-safari.png"
+                alt="Safari browser"></a>
+          </div>
+        </div>
+      </div>
 
-				<div id="warningBrowserBlock" style="display:none;">
-					<div class="browserIcons">
-						<a href="https://www.mozilla.org/firefox" target="_blank"><img
-								src="TemplateData/img/browser-firefox.png" alt="Firefox browser"></a>
-						<a href="https://www.google.com/chrome" target="_blank"><img
-								src="TemplateData/img/browser-chrome.png" alt="Chrome browser"></a>
-						<a href="https://www.apple.com/safari/" target="_blank"><img
-								src="TemplateData/img/browser-safari.png" alt="Safari browser"></a>
-					</div>
-				</div>
-			</div>
+      <div id="errorBrowserBlock" style="display:none;">
+        <img class="logo" src="TemplateData/img/Logo.png"></img>
+        <div id="errorContent" style="display:none;">
+          <div class="browserIcons">
+            <a href="https://www.mozilla.org/firefox" target="_blank"><img src="TemplateData/img/browser-firefox.png"
+                alt="Firefox browser"></a>
+            <a href="https://www.google.com/chrome" target="_blank"><img src="TemplateData/img/browser-chrome.png"
+                alt="Chrome browser"></a>
+            <a href="https://www.apple.com/safari/" target="_blank"><img src="TemplateData/img/browser-safari.png"
+                alt="Safari browser"></a>
+          </div>
+        </div>
+      </div>
 
-			<div id="errorBrowserBlock" style="display:none;">
-				<img class="logo" src="TemplateData/img/Logo.png"></img>
-				<div id="errorContent" style="display:none;">
-					<div class="browserIcons">
-						<a href="https://www.mozilla.org/firefox" target="_blank"><img
-								src="TemplateData/img/browser-firefox.png" alt="Firefox browser"></a>
-						<a href="https://www.google.com/chrome" target="_blank"><img
-								src="TemplateData/img/browser-chrome.png" alt="Chrome browser"></a>
-						<a href="https://www.apple.com/safari/" target="_blank"><img
-								src="TemplateData/img/browser-safari.png" alt="Safari browser"></a>
-					</div>
-				</div>
-			</div>
+    </div>
+  </div>
+  <script src="web3/index.js"></script>
+  <script>
+    function ToggleFullScreen() {
+      var isInFullScreen = (document.fullscreenElement && document.fullscreenElement !== null) ||
+        (document.webkitFullscreenElement && document.webkitFullscreenElement !== null) ||
+        (document.msFullscreenElement && document.msFullscreenElement !== null);
 
-		</div>
-	</div>
+      var element = document.body.getElementsByClassName("webgl-content")[0];
 
-	<script>
-		function ToggleFullScreen() {
-			var isInFullScreen = (document.fullscreenElement && document.fullscreenElement !== null) ||
-				(document.webkitFullscreenElement && document.webkitFullscreenElement !== null) ||
-				(document.msFullscreenElement && document.msFullscreenElement !== null);
+      if (!isInFullScreen) {
+        // document.getElementById("fullScreenButton").style.backgroundImage = "url('TemplateData/img/fullScreen_off.png')";
+        if (element.webkitRequestFullscreen) {
+          element.webkitRequestFullscreen();
+        } else if (element.msRequestFullscreen) {
+          element.msRequestFullscreen();
+        } else if (element.requestFullscreen) {
+          element.requestFullscreen();
+        }
+      }
+      else {
+        // document.getElementById("fullScreenButton").style.backgroundImage = "url('TemplateData/img/fullScreen_on.png')";
+        if (document.exitFullscreen) {
+          document.exitFullscreen();
+        } else if (document.webkitExitFullscreen) { //Chrome, Safari and Opera
+          document.webkitExitFullscreen();
+        } else if (document.msExitFullscreen) { //IE/Edge
+          document.msExitFullscreen();
+        }
+      }
+    }
 
-			var element = document.body.getElementsByClassName("webgl-content")[0];
+    function CheckCompatibility() {
+      if (!hasWebGL()) {
+        document.getElementById("errorBrowserBlock").style.display = "inherit";
+      }
+      else if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        document.getElementById("warningMobileBlock").style.display = "inherit";
+      }
+      else if (!isFirefox && !isSafari && !isChrome) {
+        document.getElementById("warningBrowserBlock").style.display = "inherit";
+      }
+    }
 
-			if (!isInFullScreen) {
-				// document.getElementById("fullScreenButton").style.backgroundImage = "url('TemplateData/img/fullScreen_off.png')";
-				if (element.webkitRequestFullscreen) {
-					element.webkitRequestFullscreen();
-				} else if (element.msRequestFullscreen) {
-					element.msRequestFullscreen();
-				} else if (element.requestFullscreen) {
-					element.requestFullscreen();
-				}
-			}
-			else {
-				// document.getElementById("fullScreenButton").style.backgroundImage = "url('TemplateData/img/fullScreen_on.png')";
-				if (document.exitFullscreen) {
-					document.exitFullscreen();
-				} else if (document.webkitExitFullscreen) { //Chrome, Safari and Opera
-					document.webkitExitFullscreen();
-				} else if (document.msExitFullscreen) { //IE/Edge
-					document.msExitFullscreen();
-				}
-			}
-		}
+    function hasWebGL() {
+      var supported;
+      try {
+        var canvas = document.createElement('canvas');
+        supported = !!window.WebGLRenderingContext && (canvas.getContext('webgl') || canvas.getContext('experimental-webgl'));
+      } catch (e) { supported = false; }
 
-		function CheckCompatibility() {
-			if (!hasWebGL()) {
-				document.getElementById("errorBrowserBlock").style.display = "inherit";
-			}
-			else if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-				document.getElementById("warningMobileBlock").style.display = "inherit";
-			}
-			else if (!isFirefox && !isSafari && !isChrome) {
-				document.getElementById("warningBrowserBlock").style.display = "inherit";
-			}
-		}
+      try {
+        // let is by no means required, but will help us rule out some old browsers/devices with potentially buggy implementations: http://caniuse.com/#feat=let
+        eval('let foo = 123;');
+      } catch (e) { supported = false; }
+      canvas = undefined;
+      return supported;
+    }
 
-		function hasWebGL() {
-			var supported;
-			try {
-				var canvas = document.createElement('canvas');
-				supported = !!window.WebGLRenderingContext && (canvas.getContext('webgl') || canvas.getContext('experimental-webgl'));
-			} catch (e) { supported = false; }
+    var isFirefox = typeof InstallTrigger !== 'undefined';
+    var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && safari.pushNotification));
 
-			try {
-				// let is by no means required, but will help us rule out some old browsers/devices with potentially buggy implementations: http://caniuse.com/#feat=let
-				eval('let foo = 123;');
-			} catch (e) { supported = false; }
-			canvas = undefined;
-			return supported;
-		}
+    var isChromium = window.chrome;
+    var winNav = window.navigator;
+    var vendorName = winNav.vendor;
+    var isOpera = typeof window.opr !== "undefined";
+    var isIEedge = winNav.userAgent.indexOf("Edge") > -1;
+    var isIOSChrome = winNav.userAgent.match("CriOS");
+    var isChrome = isIOSChrome || (isChromium !== null && typeof isChromium !== "undefined" && vendorName === "Google Inc." && isOpera === false && isIEedge === false);
 
-		var isFirefox = typeof InstallTrigger !== 'undefined';
-		var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && safari.pushNotification));
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/Build.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/Build.data",
+      frameworkUrl: buildUrl + "/Build.framework.js",
+      codeUrl: buildUrl + "/Build.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "Royale Kingdom",
+      productVersion: "1.0.a.0012",
+    };
 
-		var isChromium = window.chrome;
-		var winNav = window.navigator;
-		var vendorName = winNav.vendor;
-		var isOpera = typeof window.opr !== "undefined";
-		var isIEedge = winNav.userAgent.indexOf("Edge") > -1;
-		var isIOSChrome = winNav.userAgent.match("CriOS");
-		var isChrome = isIOSChrome || (isChromium !== null && typeof isChromium !== "undefined" && vendorName === "Google Inc." && isOpera === false && isIEedge === false);
+    var container = document.querySelector("#gameContainer");
+    var canvas = document.querySelector("#gameCanvas");
+    var loadingBar = document.querySelector("#loadingBlock");
+    var progressBarFull = document.querySelector("#fullBar");
+    var progressBarEmpty = document.querySelector("#emptyBar");
+    // var fullscreenButton = document.querySelector("#fullScreenButton");
 
-		var buildUrl = "Build";
-		var loaderUrl = buildUrl + "/Build.loader.js";
-		var config = {
-			dataUrl: buildUrl + "/Build.data",
-			frameworkUrl: buildUrl + "/Build.framework.js",
-			codeUrl: buildUrl + "/Build.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-			companyName: "DefaultCompany",
-			productName: "Royale Kingdom",
-			productVersion: "1.0.a.001",
-		};
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      container.className = "unity-mobile";
+      config.devicePixelRatio = 1;
+    }
+    // CheckCompatibility();
 
-		var container = document.querySelector("#gameContainer");
-		var canvas = document.querySelector("#gameCanvas");
-		var loadingBar = document.querySelector("#loadingBlock");
-		var progressBarFull = document.querySelector("#fullBar");
-		var progressBarEmpty = document.querySelector("#emptyBar");
-		// var fullscreenButton = document.querySelector("#fullScreenButton");
-
-		if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-			container.className = "unity-mobile";
-			config.devicePixelRatio = 1;
-		}
-		// CheckCompatibility();
-
-		var targetProgress = 0;
-		var currentProgress = 0;
-		var script = document.createElement("script");
-		script.src = loaderUrl;
-		script.onload = () => {
-			createUnityInstance(canvas, config, (progress) => {
-				targetProgress = progress;
-			}).then((unityInstance) => {
-				// fullscreenButton.onclick = () => {
-				// 	ToggleFullScreen();
-				// };
-			}).catch((message) => {
-				alert(message);
-			});
-		};
-		document.body.appendChild(script);
-		var delta = 0;
-		var x = setInterval(function () {
-			if (targetProgress > 0) {
-				delta = (targetProgress - currentProgress) / 10;
-				if (delta > 0) currentProgress += delta;
-				if (currentProgress > 1) currentProgress = 1;
-				if (Math.abs(targetProgress - currentProgress) <= 0.001) {
-					currentProgress = targetProgress;
-				}
-				setProgress(currentProgress);
-			}
-		}, 10);
-
-		var setProgress = function (progress) {
-			progressBarFull.style.width = 100 * progress + "%";
-			progressBarEmpty.style.width = (100 * (1 - progress)) + "%";
-			if (progress == 1) {
-				loadingBar.style.display = "none";
-				clearInterval(x);
-			}
-		}
-
-		setProgress(0);
-	</script>
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+      }).catch((message) => {
+        alert(message);
+      });
+    };
+    document.body.appendChild(script);
+  </script>
 
 </body>
 
