--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         streamingAssetsUrl: "StreamingAssets",
       companyName: "Royale Kingdom",
       productName: "Royale Kingdom",
-      productVersion: "1.0.a.0018",
+      productVersion: "2022.04.17_22.10",
     };
 
     var container = document.querySelector("#gameContainer");
